p4-translation/tests/FieldMethodSameName.mj.err
 line 1, column 19: error: field and method with the same name (f)
