p4-translation/tests/FieldMethodSameName.mj
type T = object { f: int; f(); };